todo-item.css: fix content overflowing the parent container

--- a/src/assets/item/todo/todo-item.css
+++ b/src/assets/item/todo/todo-item.css
@@ -5,6 +5,7 @@
 .todo-content-wrapper {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
   gap: 4px;
 }
 
@@ -15,15 +16,15 @@
 .todo-item .todo-content {
   background-color: transparent;
   border: none;
-  flex-grow: 1;
   font-size: inherit;
   outline: none;
   resize: none;
-  white-space: pre;
+  width: 100%;
 }
 
 .todo-item p.todo-content {
-  white-space: pre;
+  white-space: break-spaces;
+  word-break: break-all;
 }
 
 .todo-item.done {
